shorty: fixed notification layout to use a minimum width to prevent ugly wrapping effects.

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -43,6 +43,7 @@
 	display: none;
 }
 .shorty-notification {
+	min-width: 300px;
 	text-align: center;
 	padding: 0.5em;
 }
